--- a/src/main/resources/templates/registro.vm
+++ b/src/main/resources/templates/registro.vm
@@ -74,12 +74,12 @@
                 </td>
                 <td>
                     <div class="radio">
-                        <label><input type="checkbox" value=true{registro.aprProfesor}></label>
+                        <label><input type="checkbox" value=${registro.aprProfesor}></label>
                     </div>
                 </td>
                 <td>
                     <div class="radio">
-                        <label><input type="checkbox" value=true{registro.aprAlumno}></label>
+                        <label><input type="checkbox" value=${registro.aprAlumno}></label>
                     </div>
                 </td>
             </tr>
