--- a/src/main/resources/templates/registro.vm
+++ b/src/main/resources/templates/registro.vm
@@ -79,7 +79,7 @@
                 </td>
                 <td>
                     <div class="radio">
-                        <label><input type="checkbox" value=${registro.aprAlumno}></label>
+                        <label><input type="checkbox" checked=${registro.aprAlumno}></label>
                     </div>
                 </td>
             </tr>
