--- a/src/main/resources/templates/asesores.vm
+++ b/src/main/resources/templates/asesores.vm
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
+<meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
     <link rel="stylesheet" href="//netdna.bootstrapcdn.com/bootstrap/3.1.1/css/bootstrap.min.css">
     <link rel="stylesheet" href="//cdnjs.cloudflare.com/ajax/libs/bootstrap-table/1.10.1/bootstrap-table.min.css">
     <script src="//code.jquery.com/jquery.js"></script>
@@ -41,7 +42,7 @@
                     <ul class="nav navbar-nav">
                         <li><a href="/index">Tesis</a></li>
                         <li class="active"><a href="/asesores">Asesores</a></li>
-                        <li><a href="#">Repositorio de tesis</a></li>
+                        <li><a href="/repositorio">Repositorio de tesis</a></li>
                         <li><a href="/registro">Registro virtual</a></li>
                     </ul>
                 </div>
