--- a/src/main/resources/templates/tesis.vm
+++ b/src/main/resources/templates/tesis.vm
@@ -1,6 +1,6 @@
 <html>
 <head>
-    <meta charset="UTF-8">
+    <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css"
           integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
@@ -36,7 +36,7 @@
                     <ul class="nav navbar-nav">
                         <li class="active"><a href="/index">Tesis</a></li>
                         <li><a href="/asesores">Asesores</a></li>
-                        <li><a href="#">Repositorio de tesis</a></li>
+                        <li><a href="/repositorio">Repositorio de tesis</a></li>
                         <li><a href="/registro">Registro virtual</a></li>
                     </ul>
                 </div>
