--- a/src/main/resources/templates/repositorio.vm
+++ b/src/main/resources/templates/repositorio.vm
@@ -42,7 +42,7 @@
                     <ul class="nav navbar-nav">
                         <li><a href="/index">Tesis</a></li>
                         <li><a href="/asesores">Asesores</a></li>
-                        <li  class="active"><a href="#">Repositorio de tesis</a></li>
+                        <li  class="active"><a href="/repositorio">Repositorio de tesis</a></li>
                         <li><a href="/registro">Registro virtual</a></li>
                     </ul>
                 </div>
