--- a/src/main/resources/templates/repositorio.vm
+++ b/src/main/resources/templates/repositorio.vm
@@ -63,7 +63,7 @@
     </tr>
     </thead>
     <tbody>
-    #foreach( $repositorio in $repositorio)
+    #foreach( $repositorio in $repositorios)
         <tr>
             <th scope="row">${repositorio.fecha}</th>
             <td>${repositorio.titulo}</td>
