--- a/src/main/resources/templates/registro.vm
+++ b/src/main/resources/templates/registro.vm
@@ -1,79 +1,87 @@
 <html>
-<head>
-    <title>Registro Vritual</title>
-    <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
-    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/css/bootstrap.min.css" />
-    <link href="EstiloRegistro.css" rel="stylesheet" type="text/css"/>
-    <link href="EstiloMenu.css" rel="stylesheet" type="text/css"/>
-</head>
-<body>
-<h1 align="center">Universidad de Lima <img width="100" height="100" src="Images/logo-universidad-de-lima.png" alt="Universidad de Lima"> </h1>
+    <head>
+        <title>Registro Vritual</title>
+        <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
+        <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/css/bootstrap.min.css" />
+        <link href="EstiloRegistro.css" rel="stylesheet" type="text/css"/>
+        <link href="EstiloMenu.css" rel="stylesheet" type="text/css"/>
+    </head>
+    <body>
+        <h1 align="center">Universidad de Lima <img width="100" height="100" src="Images/logo-universidad-de-lima.png" alt="Universidad de Lima"> </h1>
 
-<div class="container">
+        <div class="container">
 
-    <div class="Row">
+            <div class="Row">
+              
+                    <nav class="navbar navbar-default">
+                        <div class="container-fluid">
+                            <div class="navbar-header">
+                                <a class="navbar-brand" href="http://www.ulima.edu.pe/"><img src="Images/logo.png" alt=""/></a>
 
-        <nav class="navbar navbar-default">
-            <div class="container-fluid">
-                <div class="navbar-header">
-                    <a class="navbar-brand" href="http://www.ulima.edu.pe/"><img src="Images/logo.png" alt=""/></a>
-
-                    <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#navbar1">
-                        <span class="sr-only">Barra de navegacion</span>
-                        <span class="icon-bar"></span>
-                        <span class="icon-bar"></span>
-                        <span class="icon-bar"></span>
-                    </button>
+                                <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#navbar1">
+                                    <span class="sr-only">Barra de navegacion</span>
+                                    <span class="icon-bar"></span>
+                                    <span class="icon-bar"></span>
+                                    <span class="icon-bar"></span>
+                                </button>
 
 
+                            </div>
+                            <div id="navbar1" class="navbar-collapse collapse">
+                                <ul class="nav navbar-nav">
+                                    <li><a href="/index">Tesis</a></li>
+                                    <li><a href="/asesores">Asesores</a></li>
+                                    <li><a href="/repositorio">Repositorio de tesis</a></li>
+                                    <li class="active"><a href="/registro">Registro virtual</a></li>
+                                </ul>
+                            </div>
+
+                        </div>
+                    </nav>
                 </div>
-                <div id="navbar1" class="navbar-collapse collapse">
-                    <ul class="nav navbar-nav">
-                        <li><a href="/index">Tesis</a></li>
-                        <li><a href="/asesores">Asesores</a></li>
-                        <li><a href="/repositorio">Repositorio de tesis</a></li>
-                        <li class="active"><a href="/registro">Registro virtual</a></li>
-                    </ul>
+        
+
+            <div class="Row">
+                <div class="col-md-10">
+                    <table class="table table-responsive">
+                        <thead>
+                            <tr>
+                                
+                                <th>Dia-Hora</th>
+                                <th>Descripcion del Registro</th>
+
+                            </tr>
+                        </thead>
+                        <tbody>
+                            #foreach( $registro in $registros )
+                            <tr>
+                              
+                                <td>
+                                    <div class="radiotext">
+                                        <label for='express'>${registro.diahora}</label>
+                                    </div>
+                                </td>
+                                <td>
+                                    <div class="radiotext">
+                                        <label for='express'>${registro.descripcion}</label>
+                                    </div>
+
+                            </tr>
+                            #end
+
+
+
+                        </tbody>
+                    </table>
                 </div>
-
-            </div>
-        </nav>
-    </div>
-</div>
-
-<table class="table table-responsive">
-    <thead>
-    <tr>
-        <th>ID</th>
-        <th>Dia-Hora</th>
-        <th>Descripcion del Registro</th>
-       
-    </tr>
-    </thead>
-    <tbody>
-        #foreach( $registro in $registros )
-            <tr>
-                <td>
-                    <div class="radiotext">
-                        <label for='express'>${registro.id}</label>
-                    </div>
-                </td>
-                <td>
-                    <div class="radiotext">
-                        <label for='express'>${registro.diahora}</label>
-                    </div>
-                </td>
-                <td>
-                    <div class="radiotext">
-                        <label for='express'>${registro.descripcion}</label>
-                    </div>
                 
-            </tr>
-        #end
-    </tbody>
-</table>
-
-</body>
+                <div class="col-md-2">
+                    <Br><Br><Br><Br><Br>
+                    <button type="submit" class="btn btn-default">Registrar</button>
+                </div>
+            </div>
+        </div>
+    </body>
 </html>
