--- a/src/main/resources/templates/login.html
+++ b/src/main/resources/templates/login.html
@@ -333,16 +333,13 @@ body {
             <i class="fa fa-lock"></i>
         </p>
 
-        <p class="submit"><input class="btn" type="button" name="sent" value="Entrar" onclick="loginfunc()"></p>
+        <p class="submit"><input class="btn" type="submit" name="sent" value="Entrar"></p>
 
 
     </form>
 </div> <!--/ Login-->
 
 <script>
-function loginfunc() {
-    window.location.replace("index");
-}
 </script>
 
 <div class="copyright">
