--- a/src/main/resources/templates/login.html
+++ b/src/main/resources/templates/login.html
@@ -324,7 +324,7 @@ body {
     <form class="form" method="post" action="/login">
 
         <p class="field">
-            <input type="text" name="login" placeholder="model.Usuario" required/>
+            <input type="text" name="login" placeholder="Usuario" required/>
             <i class="fa fa-user"></i>
         </p>
 
