--- a/src/main/resources/templates/tesis.vm
+++ b/src/main/resources/templates/tesis.vm
@@ -34,10 +34,8 @@
                 </div>
                 <div id="navbar1" class="navbar-collapse collapse">
                     <ul class="nav navbar-nav">
+                        <li><a href="/repositorio_asesores">Repositorio de tesis</a></li>
                         <li class="active"><a href="/index">Tesis</a></li>
-                        <li><a href="/asesores">Asesores</a></li>
-                        <li><a href="/repositorio">Repositorio de tesis</a></li>
-                        <li><a href="/registro">Registro virtual</a></li>
                     </ul>
                 </div>
 
