--- a/src/main/resources/templates/registro_tesis.vm
+++ b/src/main/resources/templates/registro_tesis.vm
@@ -52,10 +52,10 @@
             </div>
         </div>
         <div class="container">
-            <form>
+            <form class="form" method="post" action="/registrar">
                 <div class="form-group">
                     <label for="ResgistroTesis">Registro de Tesis Nueva</label>
-                    <input type="text" class="form-control" id="ResgistroTesis" placeholder="Ingrese su tesis">
+                    <input type="text" class="form-control" id="title" name="title" placeholder="Ingrese el titulo de su tesis">
                 </div>
                 <div class="form-group">
                     <label for="exampleInputFile">Archivo</label>
