--- a/src/main/resources/templates/repositorio_asesores.vm
+++ b/src/main/resources/templates/repositorio_asesores.vm
@@ -40,10 +40,7 @@
                 </div>
                 <div id="navbar1" class="navbar-collapse collapse">
                     <ul class="nav navbar-nav">
-                        <li><a href="/index">Tesis</a></li>
-                        <li><a href="/asesores">Asesores</a></li>
                         <li  class="active"><a href="#">Repositorio de tesis</a></li>
-                        <li><a href="/registro">Registro virtual</a></li>
                     </ul>
                 </div>
 
@@ -54,7 +51,7 @@
 <div class="container">
  <table class="table table-striped centertable">
 
- <H1 ALIGN=JUSTIFY>Agregado Recientemente</H1>
+ <H1 ALIGN=CENTER>Agregado Recientemente</H1>
  
     <thead>
     <tr>
@@ -71,7 +68,7 @@
             <th scope="row">${tesis.fecha}</th>
             <td>${tesis.titulo}</td>
             <td>${tesis.autor}</td>
-            <td>${tesis.link}</td>
+            <td><a href="/tesis_corregir">Corregir</a></td>
         </tr>
     #end
     </tbody>
