--- a/src/main/resources/templates/tesis.vm
+++ b/src/main/resources/templates/tesis.vm
@@ -48,51 +48,87 @@
         <div class="">
             <h3 style="text-align: center ">Tesis</h3> <h5 style="text-align: center ">$titulo</h5>
             <a href="http://catarina.udlap.mx/u_dl  _a/tales/">Enlace a tesis</a>
-            <form>
+            <form class="form" method="post" action="/guardar_correc">
                 <h3>EVALUACION</h3>
 
                 <div class="form-group">
 
                     <legend>Rating</legend>
                     <div class="rating-wrapper">
-                        <input type="radio" class="rating-input" id="rating-input-1-5" name="rating-input-1"/>
-                        <label for="rating-input-1-5" class="rating-star"></label>
-                        <input type="radio" class="rating-input" id="rating-input-1-4" name="rating-input-1"/>
-                        <label for="rating-input-1-4" class="rating-star"></label>
-                        <input type="radio" class="rating-input" id="rating-input-1-3" name="rating-input-1"/>
-                        <label for="rating-input-1-3" class="rating-star"></label>
-                        <input type="radio" class="rating-input" id="rating-input-1-2" name="rating-input-1"/>
-                        <label for="rating-input-1-2" class="rating-star"></label>
-                        <input type="radio" class="rating-input" id="rating-input-1-1" name="rating-input-1"/>
-                        <label for="rating-input-1-1" class="rating-star"></label>
+                        #if($rating == 5)
+                            <input type="radio" checked value="5" class="rating-input" id="rating-input-1-5" name="rating-input-1"/>
+                            <label for="rating-input-1-5" class="rating-star"></label>
+                        #else
+                            <input type="radio" value="5" class="rating-input" id="rating-input-1-5" name="rating-input-1"/>
+                            <label for="rating-input-1-5" class="rating-star"></label>
+                        #end
+                        #if($rating == 4)
+                            <input type="radio" checked value="4" class="rating-input" id="rating-input-1-4" name="rating-input-1"/>
+                            <label for="rating-input-1-4" class="rating-star"></label>
+                        #else
+                            <input type="radio" value="4" class="rating-input" id="rating-input-1-4" name="rating-input-1"/>
+                            <label for="rating-input-1-4" class="rating-star"></label>
+                        #end
+                        #if($rating == 3)
+                             <input type="radio" checked value="3" class="rating-input" id="rating-input-1-3" name="rating-input-1"/>
+                             <label for="rating-input-1-3" class="rating-star"></label>
+                        #else
+                             <input type="radio" value="3" class="rating-input" id="rating-input-1-3" name="rating-input-1"/>
+                             <label for="rating-input-1-3" class="rating-star"></label>
+                        #end
+                        #if($rating == 2)
+                             <input type="radio" checked value="2" class="rating-input" id="rating-input-1-2" name="rating-input-1"/>
+                             <label for="rating-input-1-2" class="rating-star"></label>
+                        #else
+                             <input type="radio" value="2" class="rating-input" id="rating-input-1-2" name="rating-input-1"/>
+                             <label for="rating-input-1-2" class="rating-star"></label>
+                        #end
+                        #if($rating == 1)
+                             <input type="radio" checked value="1" class="rating-input" id="rating-input-1-1" name="rating-input-1"/>
+                             <label for="rating-input-1-1" class="rating-star"></label>
+                        #else
+                             <input type="radio" value="1" class="rating-input" id="rating-input-1-1" name="rating-input-1"/>
+                              <label for="rating-input-1-1" class="rating-star"></label>
+                         #end
                     </div>
 
                 </div>
 
+                <input type="hidden" value=$oid name="oid">
+
                 <fieldset class="form-group">
-                    <legend>Estado</legend>
-                    <div class="form-check">
-                        <label class="form-check-label">
-                            <input type="radio" class="form-check-input" name="optionsRadios" id="optionsRadios1"
-                                   value="option1">
-                            Aprobado
-                        </label>
-                    </div>
-                    <div class="form-check">
-                        <label class="form-check-label">
-                            <input type="radio" class="form-check-input" name="optionsRadios" id="optionsRadios2"
-                                   value="option2">
-                            Desaprobado
-                        </label>
-                    </div>
-                    <div class="form-check">
-                        <label class="form-check-label">
-                            <input type="radio" class="form-check-input" name="optionsRadios" id="optionsRadios3"
-                                                       value="option3" checked>
-                            Incompleto
-                        </label>
-                    </div>
-                </fieldset>
+                                    <legend>Estado</legend>
+                                    <div class="form-check">
+                                        <label class="form-check-label">
+                                            #if($estado == "Aprobado")
+                                                <input type="radio" checked class="form-check-input" name="estado" id="optionsRadios1" value="Aprobado">
+                                            #else
+                                                 <input type="radio" class="form-check-input" name="estado" id="optionsRadios1" value="Aprobado">
+                                             #end
+                                            Aprobado
+                                        </label>
+                                    </div>
+                                    <div class="form-check">
+                                        <label class="form-check-label">
+                                            #if($estado == "Desaprobado")
+                                                 <input type="radio" checked class="form-check-input" name="estado" id="optionsRadios1" value="Desaprobado">
+                                             #else
+                                                 <input type="radio" class="form-check-input" name="estado" id="optionsRadios1" value="Desaprobado">
+                                            #end
+                                            Desaprobado
+                                        </label>
+                                    </div>
+                                    <div class="form-check">
+                                        <label class="form-check-label">
+                                            #if($estado == "Incompleto")
+                                                <input type="radio" checked class="form-check-input" name="estado" id="optionsRadios1" value="Incompleto">
+                                            #else
+                                                 <input type="radio" class="form-check-input" name="estado" id="optionsRadios1" value="Incompleto">
+                                            #end
+                                            Incompleto
+                                        </label>
+                                    </div>
+                                </fieldset>
 
                 <Br>
                 <h3>FEEDBACK</h3>
@@ -126,7 +162,7 @@
                 </div>
 
 
-                <button type="submit" class="btn btn-primary">Ok</button>
+                <button type="submit" class="btn btn-primary">Guardar Cambios</button>
             </form>
 
 
