--- a/src/main/resources/templates/tesis_alumno.vm
+++ b/src/main/resources/templates/tesis_alumno.vm
@@ -50,48 +50,84 @@
         <div class="">
             <h3 style="text-align: center ">Tesis</h3> <h5 style="text-align: center ">$titulo</h5>
             <a href="http://catarina.udlap.mx/u_dl  _a/tales/">Enlace a tesis</a>
-            <form>
+            <form class="form" method="post" action="/guardar_cambios">
                 <h3>EVALUACION</h3>
 
                 <div class="form-group">
 
                     <legend>Rating</legend>
-                    <p> $rating / 5 </p>
                     <div class="rating-wrapper">
-                        <input type="radio" class="rating-input" id="rating-input-1-5" name="rating-input-1"/>
-                        <label for="rating-input-1-5" class="rating-star"></label>
-                        <input type="radio" class="rating-input" id="rating-input-1-4" name="rating-input-1"/>
-                        <label for="rating-input-1-4" class="rating-star"></label>
-                        <input type="radio" class="rating-input" id="rating-input-1-3" name="rating-input-1"/>
-                        <label for="rating-input-1-3" class="rating-star"></label>
-                        <input type="radio" class="rating-input" id="rating-input-1-2" name="rating-input-1"/>
-                        <label for="rating-input-1-2" class="rating-star"></label>
-                        <input type="radio" class="rating-input" id="rating-input-1-1" name="rating-input-1"/>
-                        <label for="rating-input-1-1" class="rating-star"></label>
-                    </div>
+                                            #if($rating == 5)
+                                                <input type="radio" disabled checked value="5" class="rating-input" id="rating-input-1-5" name="rating-input-1"/>
+                                                <label for="rating-input-1-5" class="rating-star"></label>
+                                            #else
+                                                <input type="radio" disabled value="5" class="rating-input" id="rating-input-1-5" name="rating-input-1"/>
+                                                <label for="rating-input-1-5" class="rating-star"></label>
+                                            #end
+                                            #if($rating == 4)
+                                                <input type="radio" disabled checked value="4" class="rating-input" id="rating-input-1-4" name="rating-input-1"/>
+                                                <label for="rating-input-1-4" class="rating-star"></label>
+                                            #else
+                                                <input type="radio" disabled value="4" class="rating-input" id="rating-input-1-4" name="rating-input-1"/>
+                                                <label for="rating-input-1-4" class="rating-star"></label>
+                                            #end
+                                            #if($rating == 3)
+                                                 <input type="radio" disabled checked value="3" class="rating-input" id="rating-input-1-3" name="rating-input-1"/>
+                                                 <label for="rating-input-1-3" class="rating-star"></label>
+                                            #else
+                                                 <input type="radio" disabled value="3" class="rating-input" id="rating-input-1-3" name="rating-input-1"/>
+                                                 <label for="rating-input-1-3" class="rating-star"></label>
+                                            #end
+                                            #if($rating == 2)
+                                                 <input type="radio" disabled checked value="2" class="rating-input" id="rating-input-1-2" name="rating-input-1"/>
+                                                 <label for="rating-input-1-2" class="rating-star"></label>
+                                            #else
+                                                 <input type="radio" disabled value="2" class="rating-input" id="rating-input-1-2" name="rating-input-1"/>
+                                                 <label for="rating-input-1-2" class="rating-star"></label>
+                                            #end
+                                            #if($rating == 1)
+                                                 <input type="radio" disabled checked value="1" class="rating-input" id="rating-input-1-1" name="rating-input-1"/>
+                                                 <label for="rating-input-1-1" class="rating-star"></label>
+                                            #else
+                                                 <input type="radio" disabled value="1" class="rating-input" id="rating-input-1-1" name="rating-input-1"/>
+                                                  <label for="rating-input-1-1" class="rating-star"></label>
+                                             #end
+                                        </div>
+
 
                 </div>
+
+                <input type="hidden" value=$oid name="oid">
 
                 <fieldset class="form-group">
                     <legend>Estado</legend>
                     <div class="form-check">
                         <label class="form-check-label">
-                            <input type="radio" class="form-check-input" name="optionsRadios" id="optionsRadios1"
-                                   value="option1">
+                            #if($estado == "Aprobado")
+                                <input type="radio" checked class="form-check-input" name="estado" id="optionsRadios1" value="Aprobado">
+                            #else
+                                 <input type="radio" class="form-check-input" name="estado" id="optionsRadios1" value="Aprobado">
+                             #end
                             Aprobado
                         </label>
                     </div>
                     <div class="form-check">
                         <label class="form-check-label">
-                            <input type="radio" class="form-check-input" name="optionsRadios" id="optionsRadios2"
-                                   value="option2" checked>
+                            #if($estado == "Desaprobado")
+                                 <input type="radio" checked class="form-check-input" name="estado" id="optionsRadios1" value="Desaprobado">
+                             #else
+                                 <input type="radio" class="form-check-input" name="estado" id="optionsRadios1" value="Desaprobado">
+                            #end
                             Desaprobado
                         </label>
                     </div>
                     <div class="form-check">
                         <label class="form-check-label">
-                            <input type="radio" class="form-check-input" name="optionsRadios" id="optionsRadios3"
-                                                       value="option3">
+                            #if($estado == "Incompleto")
+                                <input type="radio" checked class="form-check-input" name="estado" id="optionsRadios1" value="Incompleto">
+                            #else
+                                 <input type="radio" class="form-check-input" name="estado" id="optionsRadios1" value="Incompleto">
+                            #end
                             Incompleto
                         </label>
                     </div>
@@ -114,7 +150,7 @@
                 </div>
 
 
-                <button type="submit" class="btn btn-primary">Ok</button>
+                <button type="submit" class="btn btn-primary">Guardar Cambios</button>
                 <input type="button" onclick="location.href='/registro_tesis';" value="Registrar tesis" />
                
             </form>
