--- a/src/main/resources/templates/tesis.vm
+++ b/src/main/resources/templates/tesis.vm
@@ -10,7 +10,7 @@
 <body>
 
 <h1 align="center">Universidad de Lima <img width="100" height="100" src="Images/logo-universidad-de-lima.png"
-                                            alt="Universidad de Lima"></h1>
+                                            alt="ULima"></h1>
 
 <div class="container">
 
